welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:6: error: not found: type leveBrosse
  baisseBrosse: leveBrosse
                ^